--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,13 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btUpdate" />
 
             <TextView
+                android:id="@+id/tvResponse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/textTV1" />
